# innosetup_builder

./: .gitignore  README.md  TODO.md  example_advanced_files.py  example_components.py  example_dirs.py  example_registry.py  example_run.py  example_with_components.iss  example_with_dirs.iss  innosetup_builder.py  pyproject.toml
tests/: test_advanced_files.py  test_basic.py  test_components.py  test_dirs.py  test_registry.py  test_run.py
