[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "innosetup_builder"
description = "Programmatically create Innosetup installers and compile them with the Innosetup compiler"
version = "0.1.2"
authors = [
    { name = "Christopher Toth", email = "q@q-continuum.net" }
]
dependencies = [
    "attrs",
    "jinja2"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]
